alignment fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -316,6 +316,9 @@ padding-left: 3em;
         margin-top: 2em;
         padding-left: 3em;
     }
+    .centeredh{
+        text-align: center;
+    }
 }
 
 .background {
@@ -355,4 +358,7 @@ border-top: 2px solid #e7e7e7;
 .trusted{
 
     font-size: 2.7em ;
+}
+.centeredh{
+    text-align: left;
 }
